--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -9,15 +9,10 @@ $color-background-primary-hover: #202020;
 $color-background-secondary: #1a1a1a;
 $color-background-secondary-hover: #121212;
 
-$color-accent-primary: #10b981;
+$color-accent-primary: #2d66c1;
 $color-accent-primary-hover: color.adjust(
   $color-accent-primary,
   $lightness: 10%
-);
-$color-accent-secondary: #f59e0b;
-$color-accent-secondary-hover: color.adjust(
-  $color-accent-secondary,
-  $lightness: -10%
 );
 
 $color-success: #198754;
@@ -33,6 +28,7 @@ $color-text-white: rgba(255, 255, 255, 0.87);
 $color-subtext-white: rgba(255, 255, 255, 0.75);
 $color-text-black: #000000;
 $color-subtext-black: #101010;
+$color-text-gray: #666;
 
 $color-buttons-primary: $color-accent-primary;
 $color-buttons-primary-hover: $color-accent-primary-hover;
@@ -57,7 +53,17 @@ $font-heading-primary: (
   font-weight: 500,
 );
 
+$font-fancy-primary: (
+  font-family: (
+    'Knewave',
+    system-ui,
+  ),
+  font-weight: 400,
+  font-style: normal,
+);
+
 /* ================= SHADOWS ================= */
 
-$shadow-light: 0 0 0.5rem $color-accent-primary-hover;
-$shadow-medium: 0 0 0.25rem $color-accent-primary-hover;
+$shadow-light: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+$shadow-medium: 0 0 1rem rgba(0, 0, 0, 0.5);
+$shadow-big: 0 0 1.5rem rgba(0, 0, 0, 0.75);
