--- a/src/components/FootballTeamsForm/FootballTeamsForm.module.scss
+++ b/src/components/FootballTeamsForm/FootballTeamsForm.module.scss
@@ -1,29 +1,57 @@
 .football-teams-form {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 3rem;
   border-radius: 1rem;
   background-color: $color-background-secondary;
-  padding: 2rem;
+  padding: 3rem;
+  width: 800px;
   min-width: 800px;
 
-  .team-select-container {
+  &__teams-selection {
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     gap: 1rem;
-    width: 300px;
+    width: 100%;
 
-    & > h3 {
-      @include apply-font($font-heading-primary);
-      font-size: 1.25rem;
+    .team-select-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      width: 300px;
+
+      & > h3 {
+        @include apply-font($font-heading-primary);
+        font-size: 1.25rem;
+      }
+    }
+
+    .versus-text {
+      @include apply-font($font-fancy-primary);
+      font-size: 3rem;
+      letter-spacing: 5px;
     }
   }
 
-  .versus-text {
-    @include apply-font($font-fancy-primary);
-    font-size: 3rem;
-    letter-spacing: 5px;
+  &__submit {
+    @include apply-font($font-heading-primary);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: background-color 0.2s ease;
+    cursor: pointer;
+    border: 0;
+    border-radius: 5rem;
+    background-color: $color-accent-primary;
+    padding: 0.75rem 4rem;
+    color: $color-subtext-white;
+    font-size: 1.25rem;
+
+    &:hover {
+      background-color: $color-accent-primary-hover;
+    }
   }
 }
