--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -32,6 +32,7 @@ $color-text-gray: #666;
 
 $color-buttons-primary: $color-accent-primary;
 $color-buttons-primary-hover: $color-accent-primary-hover;
+$color-winner: #ffd350;
 
 /* ================= GRADIENTS ================= */
 
