--- a/src/components/FootballTeamsForm/FootballTeamsForm.module.scss
+++ b/src/components/FootballTeamsForm/FootballTeamsForm.module.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 3rem;
+  border: dashed 2px $color-accent-primary;
   border-radius: 1rem;
   background-color: $color-background-secondary;
   padding: 3rem;
