--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -33,6 +33,7 @@ $color-text-gray: #666;
 $color-buttons-primary: $color-accent-primary;
 $color-buttons-primary-hover: $color-accent-primary-hover;
 $color-winner: #ffd350;
+$color-draw: #515151;
 
 /* ================= GRADIENTS ================= */
 
