--- a/src/components/FootballTeamSelect/FootballTeamSelect.module.scss
+++ b/src/components/FootballTeamSelect/FootballTeamSelect.module.scss
@@ -91,6 +91,10 @@
   &:hover {
     background-color: $color-accent-primary;
   }
+
+  &--new {
+    letter-spacing: 0.5px;
+  }
 }
 
 .no-results {
