--- a/src/components/PredictionModelSelect/PredictionModelSelect.module.scss
+++ b/src/components/PredictionModelSelect/PredictionModelSelect.module.scss
@@ -88,6 +88,10 @@
   &:hover {
     background-color: $color-accent-primary;
   }
+
+  &--new {
+    letter-spacing: 0.5px;
+  }
 }
 
 .no-results {
